--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,8 @@ name = "wordle-python"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.9"
 dependencies = []
+
+[tool.setuptools.packages.find]
+where = ["src"]
