feat: Implement word validation against a cached word list
This commit introduces a word validation feature to the Wordle game.

The game now downloads a list of valid Wordle words from a remote URL
on its first run and caches it locally for subsequent use. This ensures
that all guesses are valid words without bundling a large word file
with the project.

The implementation includes:
- Addition of `requests` and `appdirs` dependencies for downloading and
  caching.
- Caching logic in the `Wordle` class to manage the word list.
- Updated tests with mocking to ensure the new functionality is tested
  without actual network calls.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,16 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = []
+dependencies = [
+    "requests",
+    "appdirs",
+]
+
+[project.optional-dependencies]
+development = [
+    "pytest",
+    "pytest-mock",
+]
 
 [tool.setuptools.packages.find]
 where = ["src"]
